Fixs in adaptive index page

--- a/changes.txt
+++ b/changes.txt
@@ -6,6 +6,7 @@
 Плашка летних предложений:
 - Увеличение высоты, чтобы выглядело не узко и плашка «дышала»
 - Установка шрифта доноров тк с ними она выглядит в разы лучше
+- Сделан таймер обратного отсчёта
 
 Шапка:
 - Увеличение высоты основого контента, опять же, с целью воздушности
