Header menu with animations

--- a/changes.txt
+++ b/changes.txt
@@ -20,3 +20,7 @@
 - Перенос на другую библиотеку
 - Централизация контента за счёт скриптов
 - Установка шрифтов донора
+
+Мобильное меню:
+- Изменена технология открытия меню
+- Полностью переписаны стили
