Cart line module

--- a/changes.txt
+++ b/changes.txt
@@ -24,3 +24,4 @@
 Мобильное меню:
 - Изменена технология открытия меню
 - Полностью переписаны стили
+- Теперь блоки плавно выплывают сбоку как и у доноров
